--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# thetestasdf: http://ogp.me/ns/fb/thetestasdf#">
       <meta property="fb:app_id"      content="552937638457502" />
       <meta property="og:type"        content="editllise:privacy" />
-      <meta property="og:url"         content="https://sites.google.com/view/editllise-privacy-policy/главная" />
+      <meta property="og:url"         content="https://molorek.github.io/psychic-sniffle/" />
       <meta property="og:title"       content="Privacy Policy" />
       <meta property="og:description" content="Our Privacy Policy" />
       <meta property="og:image"       content="https://sun1-5.userapi.com/c831408/v831408798/16b91a/FvvYiFpTzoM.jpg" />
