--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# thetestasdf: http://ogp.me/ns/fb/thetestasdf#">
       <meta property="fb:app_id"      content="552937638457502" />
-      <meta property="og:type"        content="editllise:privacy" />
+      <meta property="og:type"        content="article" />
       <meta property="og:url"         content="https://molorek.github.io/psychic-sniffle/" />
       <meta property="og:title"       content="Privacy Policy" />
       <meta property="og:description" content="Our Privacy Policy" />
